Arranged + Adding constants